# stock_analysis_ecample

./: .gitignore  README.md  pyproject.toml  report.md  streamlit_app.py
src/stock_analysis/: crew.py  main.py  report.md  streamlit_app.py
src/stock_analysis/config/: agents.yaml  tasks.yaml
