[tool.poetry]
name = "stock_analysis"
version = "0.1.0"
description = "stock_analysis using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }
agentops = "^0.3.11"
streamlit = "^1.38.0"

[tool.poetry.scripts]
stock_analysis = "stock_analysis.main:run"
run_crew = "stock_analysis.main:run"
train = "stock_analysis.main:train"
replay = "stock_analysis.main:replay"
test = "stock_analysis.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
